<resources>
    <string name="app_name">傻孩子司导端</string>
    <string name="applicationId">com.yinglan.scg</string>
    <string name="loggingLoad">登录中&#8230;</string>
    <string name="sendingLoad">发送中&#8230;</string>
    <string name="dataLoad">数据加载中&#8230;</string>
    <string name="submissionLoad">提交中&#8230;</string>
    <string name="submitSuccess">提交成功！</string>
    <string name="crossLoad">上传中&#8230;</string>
    <string name="download">下载中&#8230;</string>
    <string name="shareJumpLoad">分享跳转中&#8230;</string>
    <string name="saveLoad">保存中&#8230;</string>
    <string name="paymentLoad">支付中&#8230;</string>
    <string name="cancelLoad">取消中&#8230;</string>
    <string name="deleteLoad">删除中&#8230;</string>
    <string name="addLoad">加入中&#8230;</string>
    <string name="attentionLoad">关注中&#8230;</string>
    <string name="cancelCttentionLoad">取消关注中&#8230;</string>
    <string name="reportLoad">举报中&#8230;</string>
    <string name="customerServiceLoad">连接客服中&#8230;</string>
    <string name="videoPathError">视频路径错误</string>
    <string name="imagePathError">图片路径错误</string>
    <string name="noData">没有数据</string>
    <string name="failedUploadPicture">上传失败，请重试</string>
    <string name="failedUploadVideo">上传失败，请重试</string>
    <string name="readAndWrite">这款应用需要获取读写权限，才能使用</string>
    <string name="sdPermission">您拒绝了「SD卡读写权限」所需要的相关权限!请到「设置」开启权限</string>
    <string name="locationRelatedPermission">您拒绝了「定位」所需要的相关权限!</string>
    <string name="denyPermission">您拒绝了「图片选择」所需要的相关权限!</string>
    <string name="needPermission">图片选择需要以下权限:\n\n1.访问设备上的照片\n\n2.拍照\n\n3.读写权限</string>
    <string name="operation_error">操作失败,请稍后再试</string>
    <string name="alipay_system_exception">支付系统异常</string>
    <string name="alipay_account_exception">此帐号绑定的支付宝账户被冻结或不允许支付</string>
    <string name="alipay_has_unbound">该用户已解除绑定</string>
    <string name="alipay_order_error">订单支付失败</string>
    <string name="alipay_order_cancel">您取消了支付</string>
    <string name="pay_error">支付失败</string>
    <string name="pay_network">网络连接异常</string>
    <string name="pay_result_confirmed">支付结果确认中</string>
    <string name="alipay_order_canceled">支付已取消</string>
    <string name="payment_succeed">恭喜您，支付成功！</string>
    <string name="alipay_succeed">支付成功</string>
    <string name="wxappinstalled">请先安装微信再进行支付</string>
    <string name="alipayappinstalled">请先安装支付宝再进行支付</string>
    <string name="iKnow">我知道了</string>
    <string name="skip">跳过 ></string>
    <string name="experienceImmediately">立即体验</string>
    <string name="notOpenPositionSwitchClose">本应用需要结合定位功能使用，请点击按钮关闭应用，去打开定位开关后，重启应用即可正常使用</string>
    <string name="login">登录</string>
    <string name="number0">0123456789</string>
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="accountNumber">帐号</string>
    <string name="hintAccountText">请输入手机号码</string>
    <string name="inputPhone">请输入正确的帐号</string>
    <string name="password">密码</string>
    <string name="hintPasswordText">请输入数字、字母或字符</string>
    <string name="hintPasswordText5">请输入密码</string>
    <string name="hintPasswordText3">请输入确认密码</string>
    <string name="hintPasswordText4">请再次输入密码</string>
    <string name="hintPasswordText2">账号或密码错误</string>
    <string name="hintPasswordText1">密码为6～20位内的数字、字母或字符组合,请正确填写</string>
    <string name="forgotPassword">忘记密码?</string>
    <string name="bindingPhone">绑定手机号</string>
    <string name="binding">绑定</string>
    <string name="register">注册</string>
    <string name="noAccount">没有账号？</string>
    <string name="register1">立即注册</string>
    <string name="errorCode">请填写验证码</string>
    <string name="thirdpartylogin">第三方账号快捷登录</string>
    <string name="thirdqq">QQ</string>
    <string name="thirdweixin">微信</string>
    <string name="authorizationLoad">授权中&#8230;</string>
    <string name="authoriseErr">授权失败，请重试</string>
    <string name="authoriseErr1">您取消了授权</string>
    <string name="authoriseErr2">您还没有安装应用,请下载应用</string>
    <string name="authoriseErr3">没有安装应用</string>
    <string name="loginErr">登录失败，请重新登录</string>
    <string name="loginErr1">获取用户信息失败，请重新登录</string>
    <string name="failedCloudInformation">获取融云信息失败</string>
    <string name="failedCloudInformation1">获取融云信息失败,请用账号密码登录</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="secret">保密</string>
    <string name="selectCountryCode">选择国家区号</string>
    <string name="retry">重试</string>
    <string name="registerPhone">手机号注册</string>
    <string name="hintPhoneText2">国际号码前无需加0</string>
    <string name="hintPhoneText">请输入手机号</string>
    <string name="hintPhoneText1">请输入正确的手机号</string>
    <string name="hintInvitationCode">请输入邀请码</string>
    <string name="hintPassword1Text">请输入您的密码</string>
    <string name="hintPassword2Text">请再次输入您的密码</string>
    <string name="resetpwd">重置密码成功，请登录！</string>
    <string name="confirmPassword">确认密码</string>
    <string name="pleasePasswordAgain">请再输入一遍密码</string>
    <string name="password3">请输入6～20位密码</string>
    <string name="testget">已发送</string>
    <string name="passwordMismatch">两次密码输入不一致</string>
    <string name="retrievePassword">找回密码</string>
    <string name="verificationCode">验证码</string>
    <string name="testGetCode">获取验证码</string>
    <string name="revalidation">重新验证</string>
    <string name="clickFinish">点击完成代表您同意</string>
    <string name="myagreement">点击注册即表示您同意</string>
    <string name="agreement">《傻孩子注册协议》</string>
    <string name="agreement1">傻孩子注册协议</string>
    <string name="determine">确定</string>
    <string name="orderReceiving">接单</string>
    <string name="service">服务</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="clickAgainExitProgram">再按一次退出程序</string>
    <string name="notCertified">您还未认证，是否去未认证？</string>
    <string name="notCertified1">您还认证失败，是否去重新认证？</string>
    <string name="finishVehicleAuditFirst">请先完成车辆审核，车辆审核通过后，才能接单！</string>
    <string name="missedOrders">错过的订单</string>
    <string name="orderReceivedSuccessfully">接单订单成功</string>
    <string name="waitingResponseOrders">以下是等待响应的订单</string>
    <string name="rmb">RMB</string>
    <string name="serviceTime">服务时间</string>
    <string name="placeDeparture">出发地点</string>
    <string name="deliveredAirport">送达机场</string>
    <string name="reserveRequirements">预定要求</string>
    <string name="orderNumber">订单号</string>
    <string name="contact">联系人</string>
    <string name="contactWay">联系方式</string>
    <string name="dueThat">预定说明</string>
    <string name="dueThat1">暂无预定说明</string>
    <string name="descriptionThat">费用说明</string>
    <string name="descriptionThat1">暂无费用说明</string>
    <string name="actualRevenueComposition">实际收入构成</string>
    <string name="aggregate">总计</string>
    <string name="quickOrder">快速接单</string>
    <string name="selectVehicle">选择车辆</string>
    <string name="detailedItinerary">详细行程</string>
    <string name="noDetailedItinerary">暂无详细行程</string>
    <string name="customPreferences">定制偏好</string>
    <string name="travelPreferences">出行偏好</string>
    <string name="foodPreferences">美食偏好</string>
    <string name="accommodationPreferences">住宿偏好</string>
    <string name="lineDetails">线路详情</string>
    <string name="determineOrder">您确定接单？</string>
    <string name="unwillingnessTakeOrders">不愿意接单？</string>
    <string name="order">订单</string>
    <string name="waitingResponseService">以下是待执行的服务</string>
    <string name="travelCalendar">行程日历</string>
    <string name="endTheOrder">结束订单</string>
    <string name="finalizeOrder">您确定结束该订单？</string>
    <string name="endTheOrderSuccessfully">结束订单订单成功</string>
    <string name="interactiveMessage">互动消息</string>
    <string name="systemMessage">系统消息</string>
    <string name="systemMessageDetails">消息详情</string>
    <string name="noSystemMessage">亲，您还没有系统消息哟~</string>
    <string name="orderMessage">订单消息</string>
    <string name="deliveryMessage">物流消息</string>
    <string name="noMessage">亲，您还没有消息哟~</string>
    <string name="chooseTimeNeedServe">被圈中的日期说明您有待执行的行程哦</string>
    <string name="startTime">开始时间：</string>
    <string name="endTime">结束时间：</string>
    <string name="today">今天</string>
    <string name="day">日</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="seconds">秒</string>
    <string name="ordersTotal">订单总数</string>
    <string name="guideLevel">司导等级</string>
    <string name="serviceLevel">服务等级</string>
    <string name="myWallet">我的钱包</string>
    <string name="sillyChildCollege">傻孩子学院</string>
    <string name="sharePolite">分享有礼</string>
    <string name="setUp">设置</string>
    <string name="notLogin">您还没有登录</string>
    <string name="editData">编辑资料</string>
    <string name="notLogged">您还没有登录</string>
    <string name="loginOrRegister">登录/注册 ></string>
    <string name="loginImmediately">立即登录</string>
    <string name="certified">已认证</string>
    <string name="audit">待审核</string>
    <string name="audit2">审核中</string>
    <string name="unapprove">未通过审核</string>
    <string name="approve">已通过审核</string>
    <string name="unauthorized">资料未上传</string>
    <string name="audit1">账号待审核</string>
    <string name="disabled">已禁用</string>
    <string name="disabled1">账号被禁用</string>
    <string name="recertification1">认证失败，请重新认证</string>
    <string name="certificationProcess">认证审核中，请耐心等待</string>
    <string name="certificationProcess1">资料审核中，请耐心等待</string>
    <string name="accountNumberDisabled">账号被禁用，请联系客服</string>
    <string name="approve1">资料已审核通过,如需更改请联系客服</string>
    <string name="youNotCertified">您还未认证，请先提交认证</string>
    <string name="personalData">个人资料</string>
    <string name="headPortrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="save">保存</string>
    <string name="nicknamehint">请输入昵称</string>
    <string name="gender">性别</string>
    <string name="selfIntroduction">自我简介</string>
    <string name="myPhotoAlbum">我的相册</string>
    <string name="takephoto">拍照</string>
    <string name="chooseFromAlbum">从手机相册选择</string>
    <string name="setNickname">设置昵称</string>
    <string name="complete">完成</string>
    <string name="setSex">设置性别</string>
    <string name="setSelfIntroduction">设置自我简介</string>
    <string name="personalizedSelfIntroductionHint">一句话描述你的自我简介(最多30个字)</string>
    <string name="fillSelfIntroduction">请填写您的自我简介</string>
    <string name="authenticationInformation">认证信息</string>
    <string name="mandatory">（必填）</string>
    <string name="serviceArea">服务地区</string>
    <string name="skillsInformation">技能信息（选填）</string>
    <string name="submitAuthenticationInformation">确认提交认证资料信息</string>
    <string name="submitAuthenticationInformation1">您的认证资料已提交审核，请耐心等待</string>
    <string name="selectServiceArea">请选择服务地区</string>
    <string name="uploadVehicleInspection">请上传车检证</string>
    <string name="uploadDriverLicense">请上传驾驶证</string>
    <string name="uploadHoldingIdCard">请上传手持身份证正面照</string>
    <string name="recentSearch">最近搜索</string>
    <string name="vehicleImages">车辆图片</string>
    <string name="model">车型</string>
    <string name="canTakeNumber">可乘人数</string>
    <string name="canPutBaggage">可放行李</string>
    <string name="vehicleYear">车辆年份</string>
    <string name="licensePlateNumber">车牌号</string>
    <string name="vehiclePassengerInsurance">车辆是否有乘客保险</string>
    <string name="forService">待服务</string>
    <string name="toEvaluate">待评价</string>
    <string name="completed">已完成</string>
    <string name="all">全部</string>
    <string name="cancel">取消</string>
    <string name="pleaseSelect">请选择</string>
    <string name="prompting">提示</string>
    <string name="determineClearCache">确定清除系统缓存</string>
</resources>