<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        style="@style/MatchWrap"
        android:layout_marginLeft="@dimen/dimen58"
        android:layout_marginRight="@dimen/dimen58"
        android:background="@drawable/shape_clearcache"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_prompting"
            style="@style/MatchWrap"
            android:layout_marginTop="@dimen/dimen15"
            android:gravity="center_horizontal"
            android:text="@string/prompting"
            android:textColor="@color/titletextcolors"
            android:textSize="@dimen/textsize17" />

        <TextView
            android:id="@+id/tv_content"
            style="@style/MatchWrap"
            android:gravity="center"
            android:padding="@dimen/dimen15"
            android:text="@string/determineClearCache"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_divider"
            style="@style/DividerWidth"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20" />

        <LinearLayout
            android:id="@+id/ll_bottom"
            style="@style/Match45"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                style="@style/AutoMatch"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textsize17" />

            <View
                style="@style/DividerHeight"
                android:layout_marginBottom="@dimen/dimen6"
                android:layout_marginTop="@dimen/dimen6" />

            <TextView
                android:id="@+id/tv_determine"
                style="@style/AutoMatch"
                android:gravity="center"
                android:text="@string/determine"
                android:textColor="@color/greenColors"
                android:textSize="@dimen/textsize17" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>