<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    android:background="@color/whiteColors"
    android:orientation="vertical">

    <TextView
        android:layout_width="@dimen/dimen77"
        android:layout_height="@dimen/dimen27"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dimen27"
        android:layout_marginTop="@dimen/dimen15"
        android:background="@drawable/shape_missedorders"
        android:gravity="center"
        android:text="@string/order"
        android:textColor="@color/greenColors"
        android:textSize="@dimen/textsize12" />

    <TextView
        style="@style/MatchWrap"
        android:paddingLeft="@dimen/dimen27"
        android:paddingTop="@dimen/dimen15"
        android:text="@string/service"
        android:textColor="@color/greenColors"
        android:textSize="@dimen/textsize30"
        android:textStyle="bold" />

    <TextView
        style="@style/MatchWrap"
        android:paddingBottom="@dimen/dimen17"
        android:paddingLeft="@dimen/dimen27"
        android:paddingTop="@dimen/dimen13"
        android:text="@string/waitingResponseService"
        android:textColor="@color/hintColors"
        android:textSize="@dimen/textsize13" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen53"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/AutoWrap"
            android:paddingLeft="@dimen/dimen27"
            android:text="2018年8月"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize18"
            android:textStyle="bold" />

        <LinearLayout
            style="@style/WrapMatch"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen10">

            <ImageView
                android:layout_width="@dimen/dimen18"
                android:layout_height="@dimen/dimen20"
                android:src="@mipmap/img_travelcalendar" />


            <TextView
                style="@style/WrapWrap"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen5"
                android:paddingRight="@dimen/dimen27"
                android:text="@string/travelCalendar"
                android:textColor="@color/hintColors"
                android:textSize="@dimen/textsize15" />
        </LinearLayout>
    </LinearLayout>

    <cn.bingoogolapple.refreshlayout.BGARefreshLayout
        android:id="@+id/mRefreshLayout"
        style="@style/MatchAuto"
        android:background="@color/background"
        android:paddingTop="@dimen/dimen6">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_order"
            style="@style/MatchMatch"
            android:divider="@color/background"
            android:dividerHeight="@dimen/dimen10"
            android:overScrollMode="never"
            android:scrollbars="none"
            tools:listitem="@layout/item_airporttransportationorder" />

    </cn.bingoogolapple.refreshlayout.BGARefreshLayout>

    <include layout="@layout/common_error" />

</LinearLayout>