<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottombar_group"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen50"
    android:layout_gravity="bottom"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/bottombar_orderReceiving"
        style="@style/AutoMatch"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen5">

        <ImageView
            android:id="@+id/img_orderReceiving"
            style="@style/Image20"
            android:src="@mipmap/tab_orderreceiving_selected" />

        <TextView
            android:id="@+id/tv_orderReceiving"
            style="@style/WrapWrap"
            android:layout_marginTop="@dimen/dimen1"
            android:text="@string/orderReceiving"
            android:textColor="@color/f3516dColors"
            android:textSize="@dimen/textSize_10" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottombar_service"
        style="@style/AutoMatch"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen5">

        <ImageView
            android:id="@+id/img_service"
            style="@style/Image20"
            android:src="@mipmap/default_image" />

        <TextView
            android:id="@+id/tv_service"
            style="@style/WrapWrap"
            android:layout_marginTop="@dimen/dimen1"
            android:text="@string/service"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize_10" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/bottombar_message"
        style="@style/AutoMatch">

        <LinearLayout
            style="@style/MatchMatch"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen5">

            <ImageView
                android:id="@+id/img_message"
                style="@style/Image20"
                android:src="@mipmap/default_image" />

            <TextView
                android:id="@+id/tv_message"
                style="@style/WrapWrap"
                android:layout_marginTop="@dimen/dimen1"
                android:text="@string/message"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textSize_10" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_messageTag"
            android:layout_width="@dimen/dimen10"
            android:layout_height="@dimen/dimen10"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen10"
            android:background="@drawable/shape_homepage_dot"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottombar_mine"
        style="@style/AutoMatch"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen5">

        <ImageView
            android:id="@+id/img_mine"
            style="@style/Image20"
            android:src="@mipmap/default_image" />

        <TextView
            android:id="@+id/tv_mine"
            style="@style/WrapWrap"
            android:layout_marginTop="@dimen/dimen1"
            android:text="@string/mine"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize_10" />
    </LinearLayout>
</LinearLayout>